# mybitcoin

./: TODO
bitcoin/: Makefile.am  configure.ac
bitcoin/compat/: endian.h
bitcoin/hw/: Makefile.am  hw.cpp
bitcoin/libmath/: Makefile.am
bitcoin/src/: Makefile.am  cli.cpp  main.cpp
gethash/: config.h
gethash/src/: Makefile.am  Readme1.txt  compat.h  main.cpp  uint256.cpp
gethash/src/compat/: endian.h  endian.hx
gethash/src/config/: bitcoin-config.h.in
http-rpc/: Makefile  Makefile1  http-client.c  http-server.c  https-client.c
httprpc/: Makefile.am  config.h  configure.ac
httprpc/httprpc/: Makefile.am  bitcoin-cli.cpp  httprpc.cpp
httprpc/hw/: Makefile.am  tx.h
serialize/: config.h
serialize/compat/: endian.h
serialize/src/: Makefile.am
trasaction/: Makefile.am  config.h  configure.ac
trasaction/compat/: endian.h
trasaction/config/: bitcoin-config.h
trasaction/hw/: Makefile.am  hw.cpp  serialize.h  transaction.h  tx.h
trasaction/src/: Readme.txt  main.cpp
